--- a/client/src/commons/Enter/enter.css
+++ b/client/src/commons/Enter/enter.css
@@ -4,6 +4,8 @@
 /* font-family: 'Public Sans', sans-serif; */
 /* 120312 */
 .initial_enter {
+   padding-left: 60px;
+
     display: flex;
     justify-content: center;
     align-items: center;
