--- a/client/src/components/Sidebar/sidebar.css
+++ b/client/src/components/Sidebar/sidebar.css
@@ -26,7 +26,7 @@
 }
 
 /* min-width centra el logo */
-.sidebar .logo-details i {
+.logo-details i {
     font-size: 35px;
     color: #fff;
     height: 50px;
@@ -41,7 +41,7 @@
     overflow: auto;
 }
 
-.sidebar.close .nav-links {
+.sidebar .nav-links {
     overflow: visible;
 }
 
@@ -84,16 +84,13 @@
     text-decoration: none;
 }
 
-.sidebar .nav-links li .sub-menu {
+/* PopUp que dice el nombre decada icono */
+/* margin top es lo que alinea el cartel del icono */
+.sub-menu {
     padding: 10px 15px 10px 15px;
     margin-top: 10px;
     background: #fff;
     display: none;
-}
-
-/* PopUp que dice el nombre decada icono */
-/* margin top es lo que alinea el cartel del icono */
-.sidebar.close .nav-links li .sub-menu {
     position: absolute;
     left: 102%;
     margin-top: 20px;
@@ -105,14 +102,14 @@
     align-items: center;
 }
 
-.sidebar.close .nav-links li:hover .sub-menu {
+.nav-links li:hover .sub-menu {
     top: 0;
     opacity: 1;
     pointer-events: auto;
     transition: all 0.4s ease;
 }
 
-.sidebar.close .nav-links li .sub-menu li {
+.sub-menu li {
     color: #200A20;
     pointer-events: none;
     font-family: 'Public Sans', sans-serif;
