--- a/client/src/commons/NowPlayingSlide/now_playing_card.css
+++ b/client/src/commons/NowPlayingSlide/now_playing_card.css
@@ -7,6 +7,6 @@
     bottom: 20px;
     left: 20px;
     color: #fff;
-    font-family: 'Staatliches', cursive;
+    font-family: 'Public Sans', sans-serif;
 
   }
