--- a/client/src/commons/CardDetails/card_details.css
+++ b/client/src/commons/CardDetails/card_details.css
@@ -12,13 +12,49 @@
 }
 
 .initial_det {
-    padding-top: 10px;
     font-family: 'Staatliches', cursive;
+    padding: 1px;
 }
 
-.bottom-details {
-    width: 100%;
+.back {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 0px;
 }
+
+.back i {
+    font-size: 18px;
+    color: #fff;
+    margin: 0px;
+}
+
+.back_buttom {
+    cursor: pointer;
+    position: relative;
+    font-size: 18px;
+    margin: 0px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.back_buttom::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #fff;
+    transform: scaleX(0);
+    transform-origin: top left;
+    transition: transform 0.3s ease;
+}
+
+.back_buttom:hover::before {
+    transform: scaleX(1);
+}
+
 
 .link {
     position: relative;
@@ -47,19 +83,34 @@
     transform: scaleX(1);
 }
 
+.favorite {
+    display: flex;
+    justify-content: flex-start;
+}
+
 .favorite i {
     font-size: 35px;
     color: #fff;
     line-height: 50px;
-    margin-top: 35px;
+    margin-top: 25px;
+    margin-bottom: 0px;
 }
+
+.favorite h4 {
+    font-family: 'Public Sans', sans-serif;
+    font-size: 13px;
+    line-height: 50px;
+    margin-top: 25px;
+    margin-bottom: 0px;
+}
+
 
 .container_titleD {
     font-size: 45px;
     max-width: 250px;
 }
 
-.container_year{
+.container_year {
     font-family: 'Public Sans', sans-serif;
     font-size: 23px;
     margin: 5px 0 30px 0;
