--- a/client/src/commons/Register/register.css
+++ b/client/src/commons/Register/register.css
@@ -60,7 +60,7 @@ label {
     font-size: 15px;
 }
 
-input {
+.input {
     display: block;
     height: 45px;
     width: 100%;
@@ -75,6 +75,18 @@ input {
     color: #e5e5e5;
 }
 
+.input-error,
+select.input-error {
+    border: 1px solid #cc96ca;
+}
+
+
+.error {
+    font-family: 'Public Sans', sans-serif;
+    font-size: 12px;
+    color: #cc96ca;
+}
+
 .button_register {
     margin-top: 50px;
     width: 100%;
@@ -87,6 +99,11 @@ input {
     cursor: pointer;
     text-align: center;
 }
+
+/* .button_register:hover{
+    background-color: #080710;
+    color: #fff;
+} */
 
 .social {
     margin-top: 30px;
