--- a/client/src/commons/Search/search.css
+++ b/client/src/commons/Search/search.css
@@ -6,6 +6,35 @@
     margin-left: 60px;
 }
 
+.back i {
+    font-size: 18px;
+    color: #fff;
+    margin: 0px;
+}
+
+.back_buttom {
+    cursor: pointer;
+    position: relative;
+    font-size: 18px;
+    margin: 0px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.back_buttom::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #fff;
+    transform: scaleX(0);
+    transform-origin: top left;
+    transition: transform 0.3s ease;
+}
+
 .container_form {
     display: flex;
     justify-content: center;
