--- a/client/src/commons/CardDetails/card_details.css
+++ b/client/src/commons/CardDetails/card_details.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@200&family=Staatliches&display=swap');
 
-
 .imagen_details {
     padding-left: 60px;
     background-repeat: no-repeat;
@@ -112,21 +111,21 @@
     max-width: 250px;
 }
 
-.container_year {
+.container_tag {
     font-family: 'Public Sans', sans-serif;
-    font-size: 23px;
+    font-size: 22px;
     margin: 5px 0 30px 0;
 }
 
 .description {
     font-family: 'Public Sans', sans-serif;
-    font-size: 16px;
+    font-size: 15px;
     max-width: 450px;
 }
 
 .category {
     font-family: 'Staatliches', cursive;
-    margin-top: 130px
+    margin-top: 130px;
 }
 
 .cate1 {
