--- a/client/src/commons/Favorites/favorites.css
+++ b/client/src/commons/Favorites/favorites.css
@@ -60,3 +60,8 @@
 .back_buttomF:hover::before {
     transform: scaleX(1);
 }
+
+.not_favs {
+    font-family: 'Public Sans', sans-serif;
+    margin: 150px 500px;
+}
