--- a/client/src/commons/UserFavorites/user_favorites.css
+++ b/client/src/commons/UserFavorites/user_favorites.css
@@ -55,3 +55,8 @@
 .back_buttomUF:hover::before {
     transform: scaleX(1);
 }
+
+.not_favs {
+    font-family: 'Public Sans', sans-serif;
+    margin: 150px 500px;
+}
